--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -22,7 +22,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "types": ["../packages/types/dist"]
+      "types": ["../shared/src/types"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
