--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-toast": "1.2.7",
     "@radix-ui/react-tooltip": "1.2.0",
     "@types/lodash.debounce": "4.0.9",
+    "@types/uuid": "9.0.8",
     "autoprefixer": "10.4.21",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
@@ -50,6 +51,7 @@
     "tailwind-merge": "3.2.0",
     "tailwindcss-animate": "1.0.7",
     "tesseract.js": "6.0.1",
+    "uuid": "9.0.1",
     "zustand": "5.0.8"
   },
   "devDependencies": {
