--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-tabs": "1.1.4",
     "@radix-ui/react-toast": "1.2.7",
     "@radix-ui/react-tooltip": "1.2.0",
+    "@types/lodash": "^4.17.20",
     "@types/lodash.debounce": "4.0.9",
     "@types/uuid": "9.0.8",
     "autoprefixer": "10.4.21",
@@ -36,6 +37,7 @@
     "clsx": "2.1.1",
     "framer-motion": "12.11.0",
     "js-cookie": "3.0.5",
+    "lodash": "^4.17.21",
     "lodash.debounce": "4.0.8",
     "lucide-react": "0.487.0",
     "next": "14.2.28",
